chandeliers-lus/tests/compile_fail/ui/clk/too-slow.stderr
error: This expression is too slow: expected the implicit clock 'self, found 'when b
 --> tests/compile_fail/ui/clk/too-slow.rs:6:14
  |
6 |         _n = 1 when b;
  |              ^^^^^^^^
  |
note: Found 'when b here
 --> tests/compile_fail/ui/clk/too-slow.rs:6:21
  |
6 |         _n = 1 when b;
  |                     ^
note: Expected because this expression moves at the implicit pace
 --> tests/compile_fail/ui/clk/too-slow.rs:6:9
  |
6 |         _n = 1 when b;
  |         ^^
